--- a/src/package.xml
+++ b/src/package.xml
@@ -16,6 +16,7 @@
   <filein>koans/TestArray.st</filein>
   <filein>koans/TestString.st</filein>
   <filein>koans/TestCharacter.st</filein>
+  <filein>koans/TestRegex.st</filein>
   <filein>koans/TestSymbol.st</filein>
   <filein>koans/TestBoolean.st</filein>
   <filein>koans/TestSet.st</filein>
@@ -32,6 +33,7 @@
   <file>koans/TestArray.st</file>
   <file>koans/TestString.st</file>
   <file>koans/TestCharacter.st</file>
+  <file>koans/TestRegex.st</file>
   <file>koans/TestSymbol.st</file>
   <file>koans/TestBoolean.st</file>
   <file>koans/TestSet.st</file>
