added OrderedCollection, SortedCollection, Set, Bag, ClassHierarchy, updated koans

--- a/src/package.xml
+++ b/src/package.xml
@@ -20,12 +20,15 @@
   <filein>koans/TestSymbol.st</filein>
   <filein>koans/TestArray.st</filein>
   <filein>koans/TestOrderedCollection.st</filein>
+  <filein>koans/TestSortedCollection.st</filein>
+  <filein>koans/TestBag.st</filein>
   <filein>koans/TestSet.st</filein>
   <filein>koans/TestBlock.st</filein>
   <filein>koans/TestCollectionsRevisited.st</filein>
   <filein>koans/TestBoolean.st</filein>
   <filein>koans/TestRegex.st</filein>
   <filein>koans/TestClass.st</filein>
+  <filein>koans/TestClassHierarchy.st</filein>
   <filein>koans/TestMetaclass.st</filein>
   <file>lib/Koan.st</file>
   <file>lib/Tracker.st</file>
@@ -41,12 +44,15 @@
   <file>koans/TestSymbol.st</file>
   <file>koans/TestArray.st</file>
   <file>koans/TestOrderedCollection.st</file>
+  <file>koans/TestSortedCollection.st</file>
+  <file>koans/TestBag.st</file>
   <file>koans/TestSet.st</file>
   <file>koans/TestBlock.st</file>
   <file>koans/TestCollectionsRevisited.st</file>
   <file>koans/TestBoolean.st</file>
   <file>koans/TestRegex.st</file>
   <file>koans/TestClass.st</file>
+  <file>koans/TestClassHierarchy.st</file>
   <file>koans/TestMetaclass.st</file>
   <file>lib/Test.st</file>
   <file>lib/ZenTest.st</file>
