skeletons for TestDictionary and TestIteration

--- a/src/package.xml
+++ b/src/package.xml
@@ -23,8 +23,10 @@
   <filein>koans/TestSortedCollection.st</filein>
   <filein>koans/TestBag.st</filein>
   <filein>koans/TestSet.st</filein>
+  <filein>koans/TestDictionary.st</filein>
   <filein>koans/TestBlock.st</filein>
   <filein>koans/TestCollectionsRevisited.st</filein>
+  <filein>koans/TestIteration.st</filein>
   <filein>koans/TestBoolean.st</filein>
   <filein>koans/TestRegex.st</filein>
   <filein>koans/TestClass.st</filein>
@@ -47,8 +49,10 @@
   <file>koans/TestSortedCollection.st</file>
   <file>koans/TestBag.st</file>
   <file>koans/TestSet.st</file>
+  <file>koans/TestDictionary.st</file>
   <file>koans/TestBlock.st</file>
   <file>koans/TestCollectionsRevisited.st</file>
+  <file>koans/TestIteration.st</file>
   <file>koans/TestBoolean.st</file>
   <file>koans/TestRegex.st</file>
   <file>koans/TestClass.st</file>
