added some TestDictionary koans, refactored

--- a/src/package.xml
+++ b/src/package.xml
@@ -23,6 +23,7 @@
   <filein>koans/TestSortedCollection.st</filein>
   <filein>koans/TestBag.st</filein>
   <filein>koans/TestSet.st</filein>
+  <filein>koans/TestAssociation.st</filein>
   <filein>koans/TestDictionary.st</filein>
   <filein>koans/TestBlock.st</filein>
   <filein>koans/TestCollectionsRevisited.st</filein>
@@ -49,6 +50,7 @@
   <file>koans/TestSortedCollection.st</file>
   <file>koans/TestBag.st</file>
   <file>koans/TestSet.st</file>
+  <file>koans/TestAssociation.st</file>
   <file>koans/TestDictionary.st</file>
   <file>koans/TestBlock.st</file>
   <file>koans/TestCollectionsRevisited.st</file>
